// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChooseDuelCard renders correctly with heroes props 1`] = `
<a
  className="makeStyles-link-1"
  href="#/heroes"
  onClick={[Function]}
>
  <div
    className="MuiPaper-root MuiCard-root makeStyles-root-2 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      className="MuiCardContent-root"
    >
      <div
        className="MuiCardHeader-root makeStyles-title-4"
        data-testid="card-title"
      >
        <div
          className="MuiCardHeader-content"
        >
          <span
            className="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
          >
            Hero vs. Hero
          </span>
        </div>
      </div>
      <div
        className="MuiCardMedia-root makeStyles-media-3"
        data-testid="card-img"
        style={
          Object {
            "backgroundImage": "url(\\"duel-pic.jpg\\")",
          }
        }
      />
    </div>
  </div>
</a>
`;

exports[`ChooseDuelCard renders correctly with starships props 1`] = `
<a
  className="makeStyles-link-1"
  href="#/starships"
  onClick={[Function]}
>
  <div
    className="MuiPaper-root MuiCard-root makeStyles-root-2 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      className="MuiCardContent-root"
    >
      <div
        className="MuiCardHeader-root makeStyles-title-4"
        data-testid="card-title"
      >
        <div
          className="MuiCardHeader-content"
        >
          <span
            className="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
          >
            Starship vs. Starship
          </span>
        </div>
      </div>
      <div
        className="MuiCardMedia-root makeStyles-media-3"
        data-testid="card-img"
        style={
          Object {
            "backgroundImage": "url(\\"starships-pic.jpg\\")",
          }
        }
      />
    </div>
  </div>
</a>
`;
